--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ attrs==25.3.0
 blinker==1.9.0
 cachetools==6.2.0
 certifi==2025.8.3
+cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
+cryptography==45.0.7
 et_xmlfile==2.0.0
 fuzzywuzzy==0.18.0
 gitdb==4.0.12
@@ -21,10 +23,13 @@ numpy==2.3.2
 openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.2
+pdfminer.six==20221105
+pdfplumber==0.9.0
 pillow==11.3.0
 plotly==6.3.0
 protobuf==6.32.0
 pyarrow==21.0.0
+pycparser==2.22
 pydeck==0.9.1
 python-dateutil==2.9.0.post0
 python-Levenshtein==0.27.1
@@ -42,5 +47,6 @@ tornado==6.5.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+Wand==0.6.13
 watchdog==6.0.0
 xlsxwriter==3.2.5
