--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,12 @@ click==8.2.1
 colorama==0.4.6
 cryptography==45.0.7
 et_xmlfile==2.0.0
+Flask==3.1.2
 fuzzywuzzy==0.18.0
 gitdb==4.0.12
 GitPython==3.1.45
 idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.6
 jsonschema==4.25.1
 jsonschema-specifications==2025.4.1
@@ -49,4 +51,6 @@ tzdata==2025.2
 urllib3==2.5.0
 Wand==0.6.13
 watchdog==6.0.0
+Werkzeug==3.1.3
+xlrd==2.0.2
 xlsxwriter==3.2.5
