--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altair==5.5.0
 attrs==25.3.0
+beautifulsoup4==4.13.5
 blinker==1.9.0
 cachetools==6.2.0
 certifi==2025.8.3
@@ -7,24 +8,35 @@ cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
+contourpy==1.3.3
 cryptography==45.0.7
+cycler==0.12.1
 et_xmlfile==2.0.0
 Flask==3.1.2
+fonttools==4.60.0
 fuzzywuzzy==0.18.0
 gitdb==4.0.12
 GitPython==3.1.45
+h11==0.16.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+joblib==1.5.2
 jsonschema==4.25.1
 jsonschema-specifications==2025.4.1
+kiwisolver==1.4.9
 Levenshtein==0.27.1
 MarkupSafe==3.0.2
+matplotlib==3.10.6
 narwhals==2.3.0
-numpy==2.3.2
+numpy==2.2.6
+openai==0.25.0
+opencv-python==4.12.0.88
 openpyxl==3.1.5
+outcome==1.3.0.post0
 packaging==25.0
 pandas==2.3.2
+pandas-stubs==2.3.2.250827
 pdfminer.six==20221105
 pdfplumber==0.9.0
 pillow==11.3.0
@@ -33,6 +45,10 @@ protobuf==6.32.0
 pyarrow==21.0.0
 pycparser==2.22
 pydeck==0.9.1
+PyMuPDF==1.26.4
+pyparsing==3.2.5
+PySocks==1.7.1
+pytesseract==0.3.13
 python-dateutil==2.9.0.post0
 python-Levenshtein==0.27.1
 pytz==2025.2
@@ -40,17 +56,31 @@ RapidFuzz==3.14.0
 referencing==0.36.2
 requests==2.32.5
 rpds-py==0.27.1
+scikit-learn==1.7.2
+scipy==1.16.2
+seaborn==0.13.2
+selenium==4.35.0
 six==1.17.0
 smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.8
 streamlit==1.49.1
 tenacity==9.1.2
+threadpoolctl==3.6.0
 toml==0.10.2
 tornado==6.5.2
-typing_extensions==4.15.0
+tqdm==4.67.1
+trio==0.30.0
+trio-websocket==0.12.2
+types-pytz==2025.2.0.20250809
+typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
 Wand==0.6.13
 watchdog==6.0.0
+websocket-client==1.8.0
 Werkzeug==3.1.3
+wsproto==1.2.0
 xlrd==2.0.2
 xlsxwriter==3.2.5
