--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
 altair==5.5.0
 attrs==25.3.0
 beautifulsoup4==4.13.5
+bleach==6.2.0
 blinker==1.9.0
+bokeh==3.8.0
+Brotli==1.1.0
 cachetools==6.2.0
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
+colorcet==3.1.0
 contourpy==1.3.3
 cryptography==45.0.7
+cssselect2==0.8.0
 cycler==0.12.1
+dash==3.2.0
 et_xmlfile==2.0.0
 Flask==3.1.2
 fonttools==4.60.0
@@ -18,7 +24,9 @@ fuzzywuzzy==0.18.0
 gitdb==4.0.12
 GitPython==3.1.45
 h11==0.16.0
+holoviews==1.21.0
 idna==3.10
+importlib_metadata==8.7.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.5.2
@@ -26,9 +34,15 @@ jsonschema==4.25.1
 jsonschema-specifications==2025.4.1
 kiwisolver==1.4.9
 Levenshtein==0.27.1
+linkify-it-py==2.0.3
+Markdown==3.9
+markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.6
+mdit-py-plugins==0.5.0
+mdurl==0.1.2
 narwhals==2.3.0
+nest-asyncio==1.6.0
 numpy==2.2.6
 openai==0.25.0
 opencv-python==4.12.0.88
@@ -37,6 +51,8 @@ outcome==1.3.0.post0
 packaging==25.0
 pandas==2.3.2
 pandas-stubs==2.3.2.250827
+panel==1.8.2
+param==2.2.1
 pdfminer.six==20221105
 pdfplumber==0.9.0
 pillow==11.3.0
@@ -45,16 +61,22 @@ protobuf==6.32.0
 pyarrow==21.0.0
 pycparser==2.22
 pydeck==0.9.1
+pydyf==0.11.0
 PyMuPDF==1.26.4
 pyparsing==3.2.5
+pyphen==0.17.2
 PySocks==1.7.1
 pytesseract==0.3.13
 python-dateutil==2.9.0.post0
 python-Levenshtein==0.27.1
 pytz==2025.2
+pyviz_comms==3.0.6
+PyYAML==6.0.3
 RapidFuzz==3.14.0
 referencing==0.36.2
+reportlab==4.4.4
 requests==2.32.5
+retrying==1.4.2
 rpds-py==0.27.1
 scikit-learn==1.7.2
 scipy==1.16.2
@@ -68,6 +90,8 @@ soupsieve==2.8
 streamlit==1.49.1
 tenacity==9.1.2
 threadpoolctl==3.6.0
+tinycss2==1.4.0
+tinyhtml5==2.0.0
 toml==0.10.2
 tornado==6.5.2
 tqdm==4.67.1
@@ -76,11 +100,17 @@ trio-websocket==0.12.2
 types-pytz==2025.2.0.20250809
 typing_extensions==4.14.1
 tzdata==2025.2
+uc-micro-py==1.0.3
 urllib3==2.5.0
 Wand==0.6.13
 watchdog==6.0.0
+weasyprint==66.0
+webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
 wsproto==1.2.0
 xlrd==2.0.2
 xlsxwriter==3.2.5
+xyzservices==2025.4.0
+zipp==3.23.0
+zopfli==0.2.3.post1
