--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ pandas==2.3.2
 pandas-stubs==2.3.2.250827
 panel==1.8.2
 param==2.2.1
+pdf2image==1.17.0
 pdfminer.six==20221105
 pdfplumber==0.9.0
 pillow==11.3.0
