--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altair==5.5.0
 attrs==25.3.0
+babel==2.17.0
 beautifulsoup4==4.13.5
 bleach==6.2.0
 blinker==1.9.0
@@ -93,6 +94,7 @@ tenacity==9.1.2
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tinyhtml5==2.0.0
+tkcalendar==1.6.1
 toml==0.10.2
 tornado==6.5.2
 tqdm==4.67.1
